# rigeo

./: .gitignore  CMakeLists.txt  README.md  package.xml  pyproject.toml  setup.py
docs/: requirements.txt
docs/src/: bibliography.bib  conf.py  index.rst  modules.rst
inertial_params/: __init__.py  geometry.py  inertia.py  kinematics.py  random.py  util.py
scripts/: ellipsoid_vs_poly.py  generate_data.py  inertial_params_ellipsoid_vs_poly.py  play.py  regress_data.py  simulation.py
scripts/examples/: box_shell_inertia_monte_carlo.py  box_wireframe_inertia_monte_carlo.py  cuboid_extremal_ellipsoids.py  ellipsoid_sampling.py  ellipsoid_shell_inertia_monte_carlo.py
scripts/experiments/: README.md  box_conditions.py  cylinder_conditions.py  generate_drip_data.py  load_box_data.py  load_data.py  load_drip_data.py  moment_vs_box.py  moment_vs_cuboid.py  moment_vs_cylinder.py  process_drip_data.py  verify_robust_trajectories.py
scripts/proofs/: concentric_ellipsoid_intersection_counter_example.py  cuboid.py  geodesic_vs_realizable_example.py  halfspace.py  intersection.py  lmi_basis.py  necessity_monte_carlo.py  parallel_planes.py  realization_problem_relaxations.py  sufficiency.py
scripts/regression/: README.md  generate_data.py  generate_single_body_data.py  generate_standalone_data.py  generate_trajectories.py  regress_data.py  regress_single_body_data.py  regress_standalone_data.py  simulation.py  threelink.py
scripts/theory/: box_edge_inertia.py  box_shell_inertia.py  box_vertex_inertia.py  box_wireframe_inertia.py  concentric_ellipsoid_intersection_counter_example.py  cuboid.py  cuboid2d.py  cuboid_density_realizability_proof.py  cuboid_lp_conditions.py  cuboid_shell_inertia.py  cuboid_trace_counterexample.py  cylinder_density_realizability_proof.py  ellipsoid_shell_inertia.py  simple.py  sufficiency.py
scripts/tools/: cuboid_extremal_ellipsoids.py  max_H_entries.py
src/inertial_params/: __init__.py  closest.py  dynamics.py  geometry.py  inertia.py  inertial.py  model.py  polydd.py  random.py  regression.py  rigidbody.py  robot.py  shape.py  trajectory.py  util.py
src/rigeo/: __init__.py  closest.py  constraint.py  experiment.py  geodesic.py  identify.py  inertial.py  moment.py  multibody.py  polydd.py  random.py  regression.py  rigidbody.py  robot.py  shape.py  spatial.py  test_util.py  trajectory.py  util.py
tests/: test_axis_aligned_box.py  test_box.py  test_box_realizability.py  test_capsule.py  test_closest_points.py  test_conv_hull.py  test_convex_hull.py  test_convex_poly.py  test_cylinder.py  test_cylinder_realizability.py  test_double_description.py  test_ellipsoid.py  test_ellipsoid_realizability.py  test_inertial_params.py  test_minimum_bounding_ellipsoid.py  test_moment.py  test_pd_distance.py  test_poly_realizability.py  test_random.py  test_rigid_body.py  test_rigidbody.py  test_test_util.py  test_util.py
urdf/: thing_pyb.urdf  ur10.urdf
(+37 files in other folders)
