[project]
name = "rigeo"
version = "0.1.0"
description = "Rigid body geometry and inertial parameters."
authors = [
  {name = "Adam Heins", email = "mail@adamheins.com"}
]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
  "numpy>=1.23.0",
  "pybullet>=3.2.1",
  "matplotlib>=3.5.1",
  "scipy>=1.10.0",
  "cvxpy[MOSEK]>=1.4.2,<1.5.0", # >=1.5.0 requires Python 3.9
  "pycddlib>=2.1.6",
  "xacrodoc>=0.4.0",
  "pin>=2.6.0",
  "hpp-fcl>=2.2.0",
  "spatialmath-python>=1.1.10",
  "tqdm>=4.66.4",
  "seaborn>=0.13.2",
  "pyb-utils>=2.2.1",
]

[dependency-groups]
dev = [
  "pytest>=7.4.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.black]
line-length = 80
