[project]
name = "rigeo"
version = "0.1.0"
description = "Rigid body geometry and inertial parameters."
authors = [
  {name = "Adam Heins", email = "mail@adamheins.com"}
]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
  "numpy>=1.23.0",
  "scipy>=1.10.0",
  "cvxpy[MOSEK]>=1.4.2",
  "pycddlib>=2.1.6,<3.0.0",  # 3.0 has breaking API changes
  "tqdm>=4.67.1",
]

[dependency-groups]
dev = [
  "pytest>=7.4.0",
  "spatialmath-python>=1.1.10",
  "pin>=3.7.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.black]
line-length = 80
